[package]
name = "wfs"
version = "0.0.1"
edition = "2021"
authors = ["donnie4w <donnie4w@gmail.com>"]

include = [
    "src/**/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE",
]

description = "Rust client for WFS"
homepage = "https://github.com/donnie4w/wfs-rsclient"
documentation = "https://docs.rs/wfs-rsclient" 
readme = "README.md"
keywords = ["wfs", "filesystem", "hdfs", "dfs", "bigdata","wfs-rsclient"]
categories = ["network", "filesystem"] 
license = "Apache-2.0"
repository = "https://github.com/donnie4w/wfs-rsclient"

[dependencies]
thrift = "0.17.0"