[package]
name = "wfs"
version = "0.0.2"
edition = "2021"
authors = ["donnie4w <donnie4w@gmail.com>"]
description = "Rust client for WFS"
homepage = "https://github.com/donnie4w/wfs-rsclient"
documentation = "https://docs.rs/wfs" 
readme = "README.md"
keywords = ["wfs", "hdfs", "dfs", "wfs-rsclient"]
categories = ["network", "filesystem"] 
license = "Apache-2.0"
repository = "https://github.com/donnie4w/wfs-rsclient"

include = [
    "src/**/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE",
]



[dependencies]
thrift = "0.17.0"
native-tls = "0.2.11"